Assemble the page and fix layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,10 +25,14 @@ html {
   font-size: 62.5%;
 }
 
+img {
+  width: 100%;
+}
+
 body {
   color: var(--color-body);
   font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-size: 2.4rem;
+  font-size: 2rem;
   line-height: 1.5;
 }
 
@@ -41,7 +45,7 @@ h3 {
 }
 
 h1 {
-  font-size: 7rem;
+  font-size: 6rem;
 }
 
 h2 {
@@ -49,8 +53,9 @@ h2 {
 }
 
 h3 {
-  font-size: 3rem;
-  font-weight: 500;
+  font-size: 2.8rem;
+  font-weight: 600;
+  line-height: 1.3;
 }
 
 p {
@@ -207,7 +212,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -235,7 +240,7 @@ a {
 }
 
 .btn--secondary:hover {
-  background: #00c8eb;
+  background: #05cdf0;
 }
 
 .btn--accent {
@@ -299,6 +304,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -320,7 +326,7 @@ a {
 
 .card__header,
 .card__body {
-  padding: 2rem 3rem;
+  padding: 2rem 7%;
 }
 
 .card--primary .card__header {
@@ -358,11 +364,11 @@ a {
 }
 
 .plan__price {
-  font-size: 6rem;
+  font-size: 5rem;
 }
 
 .plan__billing-cycle {
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: 300;
   margin-right: 1rem;
   opacity: 0.8;
@@ -378,10 +384,6 @@ a {
 .plan .list__item {
   letter-spacing: 1px;
   margin-bottom: 2rem;
-}
-
-.plan--popular {
-  transform: scale(1.1);
 }
 
 .plan--popular:hover {
@@ -402,6 +404,10 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+  .plan--popular {
+    transform: scale(1.1);
+  }
+
   .plan__name {
     font-size: 1.4rem;
   }
@@ -459,7 +465,7 @@ a {
 }
 
 .quote__author {
-  font-size: 3rem;
+  font-size: 2rem;
   font-style: normal;
   font-weight: 500;
   margin-bottom: 0;
@@ -467,7 +473,7 @@ a {
 
 .quote__organization {
   color: var(--color-headings);
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-style: normal;
   opacity: 0.4;
 }
@@ -513,11 +519,8 @@ a {
 }
 
 .testimonial__image {
+  margin: 0 3rem;
   position: relative;
-}
-
-.testimonial__image > img {
-  width: 100%;
 }
 
 .testimonial__image > .icon-container {
@@ -526,14 +529,19 @@ a {
   top: 3rem;
 }
 
-@media screen and (min-width: 768px) {
-  .testimonial .quote,
-  .testimonial .quote__author {
-    font-size: 2.4rem;
-  }
+.testimonial .quote {
+  font-size: 110%;
+  margin: 2rem 0;
+}
 
+@media screen and (min-width: 768px) {
+  .testimonial__image {
+    margin: 0;
+  }
   .testimonial .quote {
-    margin-left: 6rem;
+    font-size: 120%;
+    line-height: 1.5;
+    margin: 5rem 0 0 6rem;
   }
 }
 
@@ -546,6 +554,10 @@ a {
 .callout--primary {
   background: var(--color-primary);
   color: #fff;
+}
+
+.callout-signup {
+  transform: translateY(5rem);
 }
 
 .callout__content {
@@ -590,6 +602,7 @@ a {
 }
 
 .collapsible__chevron {
+  cursor: pointer;
   transform: rotate(-90deg);
   transition: transform 0.3s;
 }
@@ -612,8 +625,8 @@ a {
 
 /* Blocks */
 .block {
-  --pading-vertical: 6rem;
-  padding: var(--pading-vertical) 2rem;
+  --padding-vertical: 5rem;
+  padding: var(--padding-vertical) 2rem;
 }
 
 .container {
@@ -642,13 +655,13 @@ a {
 }
 
 .block--skewed-right {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
-  padding-bottom: calc(var(--pading-vertical) + 4rem);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 95%);
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
 .block--skewed-left {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
-  padding-bottom: calc(var(--pading-vertical) + 4rem);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
 /* Navigation Bar */
@@ -658,11 +671,12 @@ a {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 0 1rem;
+  padding: 1rem;
 }
 
 .nav__brand {
   transform: translateY(5px);
+  width: 150px;
 }
 
 .nav__toggler {
@@ -685,6 +699,10 @@ a {
 .nav__item {
   border-bottom: 1px solid #222;
   padding: 0.5rem 2rem;
+}
+
+.nav__item:last-of-type {
+  border-bottom: none;
 }
 
 .nav__item > a {
@@ -722,18 +740,16 @@ a {
   margin: 2rem 0 5rem;
 }
 
-.block-hero__image {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) {
-  .block-hero {
-    padding-top: 0;
-  }
-
   .block-hero__content {
     align-self: center;
     text-align: left;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .block-hero {
+    padding-top: 0;
   }
 }
 
@@ -746,10 +762,11 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
   font-size: 2rem;
   font-weight: 600;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   justify-items: center;
   margin: 0 auto;
@@ -786,10 +803,6 @@ a {
   margin: 1rem 0;
 }
 
-.feature__image {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) {
   .feature:nth-of-type(even) .feature__content {
     order: 2;
@@ -797,10 +810,6 @@ a {
 }
 
 /* Showcase Block */
-.block-showcase__image > img {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) {
   .block-showcase .grid {
     grid-template-columns: 50% 50%;
@@ -819,6 +828,7 @@ a {
 /* Footer */
 .footer {
   background: #232323;
+  padding-top: 10rem;
 }
 
 .footer a {
@@ -846,7 +856,9 @@ a {
 }
 
 .footer__heading {
+  font-size: 2.5rem;
   font-weight: 600;
+  line-height: 1.5;
   text-transform: uppercase;
 }
 
@@ -857,7 +869,6 @@ a {
 
 .footer__brand img {
   max-width: 230px;
-  width: 100%;
 }
 
 .footer__copyright {
